libunwind (1.0.1-4) unstable; urgency=low

  * Converted the build style to dh.

 -- Daigo Moriwaki <daigo@debian.org>  Sun, 16 Sep 2012 17:16:56 +0900

libunwind (1.0.1-3) unstable; urgency=low

  * debian/rules: 
    - Compile with the PIC format even for static libraries.
      (Closes: #682196)
    - Configure with --enable-cxx-exceptions (Closes: #682194)

 -- Daigo Moriwaki <daigo@debian.org>  Sun, 16 Sep 2012 14:34:23 +0900

libunwind (1.0.1-2) unstable; urgency=low

  [ Luca Falavigna ]
  * 20120707_ia64_FTBFS.patch:
    - Cherry pick patch from upstream to fix FTBFS on ia64 (Closes: #680623).

  [ Daigo Moriwaki ]
  * debian/control: Removes libunwind8's Conflicts and Replaces with
    libunwind7. (Closes: #670957)
  * Imports Ubuntu's patch, supporting the armhf architecture.
    Thanks to James Page <james.page@ubuntu.com>.  (Closes: 680308)
    - 20120704_fix_arm_ftbfs.patch
    - debian/control:
      + Supports armhf.
      + libatomic-ops-dev is no longer required for Build-Depends.

 -- Daigo Moriwaki <daigo@debian.org>  Sun, 08 Jul 2012 13:13:11 +0900

libunwind (1.0.1-1) unstable; urgency=low

  [ Jari Aalto ]
  * Non-maintainer upload.
  * Remove deprecated dpatch and upgrade to packaging format "3.0 quilt".
  * Update to Standards-Version to 3.9.3, debhelper to 9, add autotools-dev.
  * Add build-arch and build-indep targets, use dh_prep and
    correct config.* file treatment in rules file.
  * Update URL in watch and copyright file.
  * Delete source.lintian-overrides; no longer needed.
  * Fix binary-control-field-duplicates-source (Lintian).
  * Fix diff-contains-substvars (Lintian)
  * Fix no-homepage-field (Lintian).
  * Fix description-synopsis-starts-with-article (Lintian).

  [ Daigo Moriwaki ]
  * Applied a patch from Jari Aalto. (Closes: #669713)
  * debian/control:
   + Added new fields: Vcs-Git, Vcs-Browser and DM-Upload-Allowed.
   + Added myself to Maintainer, after no response from the previous
     maintainers since May 2009.